[misc]: Update name (`zenith` -> `sh40-zenith`)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "zenith"
+name = "sh40-zenith"
 description = "A markup language and color palette generators targeting the terminal."
 readme = "README.md"
 requires-python = ">=3.8"
@@ -15,7 +15,6 @@ authors = [
 classifiers = [
   "Development Status :: 4 - Beta",
   "Programming Language :: Python",
-  "Programming Language :: Python :: 3.7",
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
@@ -23,7 +22,7 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: CPython",
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
-dependencies = ["gunmetal"]
+dependencies = ["sh40-slate"]
 dynamic = ["version"]
 
 [project.urls]
